--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+.DS_Store
+*/.DS_Store
+
+
+intermediate/
+*/intermediate/
+restart
+*/restart
+log
+*/log
+hypha 
+*/hypha
+
+# makefile related
+*.s 
+*.s.d 
+*.tests 
+*.deps
+
 # Prerequisites
 *.d
 
