--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "C_Cpp.errorSquiggles": "disabled",
   "files.associations": {
-    "ios": "c"
+    "ios": "c",
+    "reduced-three-phase-noncoalescing.h": "c"
   }
 }
